# pebble-tens-verbose

./: BUILD.md  README.md  package-lock.json  package.json
python/: pyproject.toml
python/scripts/: make_screenshots.py
python/src/tens/: __init__.py  derived.py  export_c.py  layout.py  palette.py  preview.py  scene.py  state.py
src/c/: derived.c  derived.h  layout.c  layout.h  palette.h  render.c  settings.c  settings.h
src/pkjs/: config.js  index.js
tests/python/: test_derived.py  test_structure.py
